Avoid Java 9 feature